--- a/ceed.pc.template
+++ b/ceed.pc.template
@@ -3,7 +3,7 @@ includedir=${prefix}
 libdir=${prefix}
 
 Name: CEED
-Description: Code for Efficient Exascale Discretization
+Description: Code for Efficient Extensible Discretization
 Version: 0.0
 Cflags: -I${includedir}
 Libs: -L${libdir} -lceed
