Switch to include/ceed.h and lib/libceed.so directory structure
This gives the source directory a compatible directory layout with
the install directory, thus enabling a user to use either.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -16,8 +16,8 @@
 
 # Ceed directory
 CEED_DIR ?= ..
-CEED_FLAGS ?= -I$(CEED_DIR) -std=c99
-CEED_LIBS ?= -Wl,-rpath,$(abspath $(CEED_DIR)) -L$(CEED_DIR) -lceed -lm
+CEED_FLAGS ?= -I$(CEED_DIR)/include -std=c99
+CEED_LIBS ?= -Wl,-rpath,$(abspath $(CEED_DIR)/lib) -L$(CEED_DIR)/lib -lceed -lm
 
 EXAMPLES.c = $(wildcard ex*)
 EXAMPLES = $(EXAMPLES.c:%.c=%)
