--- a/ceed.pc.template
+++ b/ceed.pc.template
@@ -1,9 +1,9 @@
 prefix=%prefix%
-includedir=${prefix}
-libdir=${prefix}
+includedir=${prefix}/include
+libdir=${prefix}/lib
 
 Name: CEED
 Description: Code for Efficient Extensible Discretization
-Version: 0.0
+Version: 0.1
 Cflags: -I${includedir}
 Libs: -L${libdir} -lceed
