--- a/examples/Makefile
+++ b/examples/Makefile
@@ -32,8 +32,18 @@ all: $(EXAMPLES)
 %: %.c
 
 # Rules for building the examples
-%: %.c
+%: %.c okl-lib-cache
 	$(LINK.c) $(CEED_FLAGS) $< -o $@ $(CEED_LIBS)
+
+okl-lib-cache: #default okl-cache
+# First test to see if libceed was compiled with OCCA
+ifneq ($(wildcard $(OCCA_DIR)/lib/libocca.*),)
+# Second test to see if '..' is CEED_DIR
+ifneq ($(CEED_DIR),..)
+okl-lib-cache:
+	occa cache ceed $(abspath $(CEED_DIR)/lib/okl/*.okl)
+endif
+endif
 
 clean:
 	rm -f *~ $(EXAMPLES)
