Couple more OKL kernel fixes in example Makefiles

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -42,7 +42,7 @@ ifneq ($(wildcard $(OCCA_DIR)/lib/libocca.*),)
 # Second test to see if '..' is CEED_DIR
 ifneq ($(CEED_DIR),..)
 okl-lib-cache:
-	occa cache ceed $(abspath $(CEED_DIR)/lib/okl/*.okl)
+	$(OCCA_DIR)/bin/occa cache ceed $(abspath $(CEED_DIR)/lib/okl/*.okl)
 endif
 endif
 
