--- a/examples/mfem/Makefile
+++ b/examples/mfem/Makefile
@@ -56,7 +56,7 @@ $(MFEM_LIB_FILE):
 okl-lib-cache:
 # First test to see if libceed was compiled with OCCA
 ifneq ($(wildcard $(OCCA_DIR)/lib/libocca.*),)
-# Second test to see if '..' is CEED_DIR
+# Second test to see if '../..' is CEED_DIR
 ifneq ($(CEED_DIR),../..)
 okl-lib-cache:
 	$(OCCA_DIR)/bin/occa cache ceed $(abspath $(CEED_DIR)/lib/okl/*.okl)
