Using main MAKEFILE, added make mfem and make prove-mfem

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,5 @@ before_script:
 
 script:
   - make -j2
-  - make -j2 prove PROVE_OPTS=-v
-  - cd examples/mfem
-  - make test
+  - make -j2 prove-mfem PROVE_OPTS=-v
 
