Makefile: group prove-allexamples and follow patterns
* Speed up tests by exposing parallelism to prove
* Use TESTARGS in examples rather than pattern matching in tap.sh
* Use shallow clone and parallel make to build MFEM
* Use MFEM_CXXFLAGS=-O to speed up build
* Use pattern rules to build MFEM examples in OBJDIR
* Use non-phony dependencies to avoid overzealous building

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,11 @@ env:
   - FC=gfortran
 
 before_script:
-  - git clone https://github.com/mfem/mfem.git
-  - cd mfem
-  - make serial
-  - export MFEM_DIR=$PWD
-  - cd ..
+  - git clone --depth 1 https://github.com/mfem/mfem.git
+  - make -C mfem -j2 serial MFEM_CXXFLAGS=-O
+  - export MFEM_DIR=$PWD/mfem
 
 script:
   - make -j2
-  - make -j2 prove-mfem PROVE_OPTS=-v
+  - make -j2 prove-allexamples PROVE_OPTS=-v
 
