Remove extra memcpys from getting and restoring arrays

--- a/examples/ceed/Makefile
+++ b/examples/ceed/Makefile
@@ -19,12 +19,12 @@ CEED_DIR ?= ../..
 
 NVCC ?= nvcc
 ifeq ($(shell which $(NVCC)),)
-	CEED_FLAGS ?= -I$(CEED_DIR)/include -std=c99
-	CEED_LIBS ?= -Wl,-rpath,$(abspath $(CEED_DIR)/lib) -L$(CEED_DIR)/lib -lceed -lm
+	CEED_FLAGS += -I$(CEED_DIR)/include -std=c99
+	CEED_LIBS += -Wl,-rpath,$(abspath $(CEED_DIR)/lib) -L$(CEED_DIR)/lib -lceed -lm
 else
 	CC = $(NVCC)
-	CEED_FLAGS ?= -I$(CEED_DIR)/include -x=cu
-	CEED_LIBS ?= -Xlinker="-rpath,$(abspath $(CEED_DIR)/lib)" -L$(CEED_DIR)/lib -lceed -lm -lcudart
+	CEED_FLAGS += -I$(CEED_DIR)/include -x=cu
+	CEED_LIBS += -Xlinker="-rpath,$(abspath $(CEED_DIR)/lib)" -L$(CEED_DIR)/lib -lceed -lm -lcudart
 endif
 
 EXAMPLES.c = $(wildcard ex*.c)
