--- a/examples/ceed/Makefile
+++ b/examples/ceed/Makefile
@@ -19,11 +19,11 @@ CEED_DIR ?= ../..
 
 NVCC ?= nvcc
 ifeq ($(shell which $(NVCC)),)
-	CEED_FLAGS += -I$(CEED_DIR)/include -std=c99
+	CEED_FLAGS += -I$(CEED_DIR)/include -O3 -std=c99
 	CEED_LIBS += -Wl,-rpath,$(abspath $(CEED_DIR)/lib) -L$(CEED_DIR)/lib -lceed -lm
 else
 	CC = $(NVCC)
-	CEED_FLAGS += -I$(CEED_DIR)/include -x=cu
+	CEED_FLAGS += -I$(CEED_DIR)/include -O3 -x=cu
 	CEED_LIBS += -Xlinker="-rpath,$(abspath $(CEED_DIR)/lib)" -L$(CEED_DIR)/lib -lceed -lm -lcudart
 endif
 
