[PETSc] Modify Makefile for abspath for .okl

--- a/examples/petsc/Makefile
+++ b/examples/petsc/Makefile
@@ -15,6 +15,11 @@ bp := $(bp.c:%.c=%)
 all: $(bp)
 $(bp): | $(PETSc.pc) $(ceed.pc)
 
+# Rules for building the examples
+%: %.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(abspath $<) -o $@ \
+	  $(LDLIBS)
+
 print: $(PETSc.pc) $(ceed.pc)
 	$(info CC      : $(CC))
 	$(info CFLAGS  : $(CFLAGS))
