--- a/.travis.yml
+++ b/.travis.yml
@@ -17,17 +17,21 @@ env:
 install:
   - git clone --depth 1 https://github.com/mfem/mfem.git
   - make -C mfem -j2 serial MFEM_CXXFLAGS=-O
-  - export MFEM_DIR=$PWD/mfem
-  - curl -O http://ftp.mcs.anl.gov/pub/petsc/release-snapshots/petsc-lite-3.9.3.tar.gz
-  - tar xf petsc-lite-3.9.3.tar.gz
-  - pushd petsc-3.9.3 && ./configure --with-debugging=0 COPTFLAGS=-O --with-mpi=0 --with-fc=0 --with-cxx=0 --prefix=$HOME/install/petsc
-  - make && make install && popd
-  - export PETSC_DIR=$HOME/install/petsc
+  - export MFEM_DIR=$PWD/mfem PETSC_INSTALL=$HOME/install/petsc-3.9.3
+  - test -d $PETSC_INSTALL
+    || ( curl -O http://ftp.mcs.anl.gov/pub/petsc/release-snapshots/petsc-lite-3.9.3.tar.gz
+        && tar xf petsc-lite-3.9.3.tar.gz
+        && cd petsc-3.9.3
+        && ./configure --with-debugging=0 COPTFLAGS=-O --with-mpi=0 --with-fc=0 --with-cxx=0 --prefix=$PETSC_INSTALL
+        && make
+        && make install )
+  - export PETSC_DIR=$PETSC_INSTALL
 
 script:
   - make -j2
   - make -j2 prove-all PROVE_OPTS=-v
 
 cache:
-  - ccache
+  ccache: true
+  directories:
   - $HOME/install
