Makefile: add OPT for all-language opt/dbg flags

--- a/examples/mfem/Makefile
+++ b/examples/mfem/Makefile
@@ -14,9 +14,11 @@
 # software, applications, hardware, advanced system engineering and early
 # testbed platforms, in support of the nation's exascale computing imperative.
 
+OPT ?= -O -g
+
 # Ceed directory
 CEED_DIR ?= ../..
-CEED_FLAGS ?= -I$(CEED_DIR)/include
+CEED_FLAGS ?= -I$(CEED_DIR)/include $(OPT)
 CEED_LIBS ?= -Wl,-rpath,$(abspath $(CEED_DIR)/lib) -L$(CEED_DIR)/lib -lceed
 
 # Use an MFEM build directory or an MFEM install directory
