--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,14 @@ addons:
     - liblapack-dev
 
 env:
-  - FC=gfortran
+  - FC=gfortran OCCA_HEAD=HEAD
+  - FC=gfortran OCCA_HEAD=527494c
 
 install:
   - git clone --depth 1 https://github.com/mfem/mfem.git
   - make -C mfem -j2 serial MFEM_CXXFLAGS=-O
-  - git clone --depth 1 https://github.com/libocca/occa.git
+  - git clone https://github.com/libocca/occa.git
+  - git -C occa reset --hard $OCCA_HEAD
   - make -C occa -j2
   - export OCCA_DIR=$PWD/occa MFEM_DIR=$PWD/mfem PETSC_INSTALL=$HOME/install/petsc-3.9.3
   - test -d $PETSC_INSTALL
