--- a/.travis.yml
+++ b/.travis.yml
@@ -99,14 +99,16 @@ install:
   - export XSMM_DIR=$HOME/install/libxsmm
 # Nek5k
   - if [ "$TRAVIS_OS_NAME" != "osx" ]; then
-        if [ ! -s $NEK5K_INSTALL/genbox/genbox.o ] || [ ! -s $NEK5K_INSTALL/genmap/genmap.o ] || [ ! -s $NEK5K_INSTALL/reatore2/reatore2.o]; then
-          curl -L https://github.com/Nek5000/Nek5000/releases/download/v17.0/Nek5000-v17.0.tar.gz > Nek5000-v17.0.tar.gz
-          && tar xvzf Nek5000-v17.0.tar.gz
-          && cd Nek5000/tools
-          && ./maketools genbox genmap reatore2;
-        fi;
+        ( test -s "$NEK5K_INSTALL/genbox/genbox.o"
+        && test -s "$NEK5K_INSTALL/genmap/genmap.o"
+        && test -s "$NEK5K_INSTALL/reatore2/reatore2.o" )
+        || ( curl -L https://github.com/Nek5000/Nek5000/releases/download/v17.0/Nek5000-v17.0.tar.gz > Nek5000-v17.0.tar.gz
+        && tar xvzf Nek5000-v17.0.tar.gz
+        && cd Nek5000/tools
+        && ./maketools genbox genmap reatore2 );
         export NEK5K_DIR=$NEK5K_INSTALL PATH=$NEK5K_DIR/bin:$PATH;
     fi
+
 # PETSc
   - cd $CURR_DIR
   - export PETSC_INSTALL=$HOME/install/petsc-3.10.0
@@ -118,6 +120,7 @@ install:
         && make
         && make install )
   - export PETSC_DIR=$PETSC_INSTALL
+  - cd $CURR_DIR
 
 script:
   - export COVERAGE=1
