--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   vmImage: 'Ubuntu-16.04'
 
-container: jedbrown/petsc:latest
+container: jedbrown/petsc:master
 
 steps:
 - script: |
