Small update in examples/petsc/Makefile - add a comment that PETSC_ARCH can be undefined/empty, e.g. when using PETSc installed through Spack.

--- a/examples/petsc/Makefile
+++ b/examples/petsc/Makefile
@@ -1,5 +1,6 @@
+# Note: PETSC_ARCH can be undefined or empty for installations which do not use
+#       PETSC_ARCH - for example when using PETSc installed through Spack.
 PETSc.pc := $(PETSC_DIR)/$(PETSC_ARCH)/lib/pkgconfig/PETSc.pc
-PETSc.pc := $(or $(wildcard $(PETSc.pc)),$(PETSC_DIR)/lib/pkgconfig/PETSc.pc)
 CEED_DIR ?= ../..
 ceed.pc := $(CEED_DIR)/lib/pkgconfig/ceed.pc
 
