--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ addons:
   apt:
     packages:
     - gfortran
-    - libopenblas-dev
     - liblapack-dev
+    - libopenblas-dev
   homebrew:
     packages:
     - ccache
@@ -35,10 +35,10 @@ matrix:
     - os: linux
       env: FC=gfortran OCCA_HEAD=HEAD
       compiler: gcc
+  exclude:
     - os: linux
       env: FC=gfortran OCCA_HEAD=HEAD
       compiler: clang
-  exclude:
     - os: osx
       env: FC=gfortran OCCA_HEAD=HEAD
       compiler: gcc
@@ -49,23 +49,10 @@ matrix:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
-        && brew link --overwrite gcc; fi
+        && brew link --overwrite gcc;
+    fi
   - export CURR_DIR=$PWD
   - cd $HOME/install
-# MFEM
-  - if [[ -d mfem ]]; then
-        git -C mfem pull --depth 1 --allow-unrelated-histories;
-        if [[ $? -eq 0 ]]; then
-          git -C mfem gc --prune=all;
-        else 
-          rm -rf mfem
-          && git clone --depth 1 https://github.com/mfem/mfem.git;
-        fi
-    else
-        git clone --depth 1 https://github.com/mfem/mfem.git;
-    fi
-  - make -C mfem -j2 serial MFEM_CXXFLAGS=-O
-  - export MFEM_DIR=$HOME/install/mfem
 # OCCA
   - if [[ -d occa ]]; then
         git -C occa pull --allow-unrelated-histories;
@@ -96,6 +83,34 @@ install:
     fi
   - make -C libxsmm
   - export XSMM_DIR=$HOME/install/libxsmm
+# MFEM
+  - if [[ -d mfem ]]; then
+        git -C mfem pull --depth 1 --allow-unrelated-histories;
+        if [[ $? -eq 0 ]]; then
+          git -C mfem gc --prune=all;
+        else 
+          rm -rf mfem
+          && git clone --depth 1 https://github.com/mfem/mfem.git;
+        fi
+    else
+        git clone --depth 1 https://github.com/mfem/mfem.git;
+    fi
+  - make -C mfem -j2 serial MFEM_CXXFLAGS=-O
+  - export MFEM_DIR=$HOME/install/mfem
+# Nek5k
+  - if [[ -d Nek5000 ]]; then
+        git -C Nek5000 pull --depth 1 --allow-unrelated-histories;
+        if [[ $? -eq 0 ]]; then
+          git -C Nek5000 gc --prune=all;
+        else 
+          rm -rf Nek5000
+          && git clone --depth 1 https://github.com/Nek5000/Nek5000.git;
+        fi
+    else
+        git clone --depth 1 https://github.com/Nek5000/Nek5000.git;
+    fi
+  - cd Nek5000/tools && ./maketools genbox genmap reatore2 && cd ../..;
+  - export NEK5K_DIR=$HOME/install/Nek5000 PATH=$HOME/install/Nek5000/bin:$PATH;
 # PETSc
   - cd $CURR_DIR
   - export PETSC_INSTALL=$HOME/install/petsc-3.10.0
