Add junit target and report test results to Azure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,11 @@ steps:
     make
   displayName: 'make'
 - script: |
-    make prove-all
-  displayName: 'prove'
+    make junit
+  displayName: 'junit'
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: 'build/*.junit'
+    mergeTestResults: true
+    failTaskOnFailedTests: true
