Update after Jed's revision

--- a/examples/navier-stokes/Makefile
+++ b/examples/navier-stokes/Makefile
@@ -14,6 +14,8 @@
 # software, applications, hardware, advanced system engineering and early
 # testbed platforms, in support of the nation's exascale computing imperative.
 
+OPT ?= -O -g -march=native -ffp-contract=fast -fopenmp-simd
+
 PETSc.pc := $(PETSC_DIR)/$(PETSC_ARCH)/lib/pkgconfig/PETSc.pc
 CEED_DIR ?= ../..
 ceed.pc := $(CEED_DIR)/lib/pkgconfig/ceed.pc
@@ -33,8 +35,7 @@ $(navierstokes): | $(PETSc.pc) $(ceed.pc)
 
 # Rules for building the example
 %: %.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(abspath $<) -o $@ \
-	  $(LDLIBS)
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(abspath $<) -o $@ $(LDLIBS)
 
 print: $(PETSc.pc) $(ceed.pc)
 	$(info CC      : $(CC))
@@ -42,6 +43,7 @@ print: $(PETSc.pc) $(ceed.pc)
 	$(info CPPFLAGS: $(CPPFLAGS))
 	$(info LDFLAGS : $(LDFLAGS))
 	$(info LDLIBS  : $(LDLIBS))
+	$(info OPT     : $(OPT))
 	@true
 
 clean:
