junit.py: exit nonzero on failed test; make -k

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ petsc:
   stage: test
   image: jedbrown/petsc:latest
   script:
-    - make junit
+    - make -j$(nproc)
+    - make -k -j$(nproc) junit
   artifacts:
     paths:
       - build/*.junit
