gitlab-ci: add performance logging test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,11 @@ petsc:
   image: jedbrown/petsc:latest
   script:
     - make -j$(nproc)
+    - echo '[{"subject":"/","metrics":[{"name":"Transfer Size (KB)","value":"19.5","desiredSize":"smaller"},{"name":"Speed Index","value":0,"desiredSize":"smaller"},{"name":"Total Score","value":92,"desiredSize":"larger"},{"name":"Requests","value":4,"desiredSize":"smaller"}]}]' > performance.json
     - make -k -j$(nproc) junit
   artifacts:
     paths:
       - build/*.junit
     reports:
       junit: build/*.junit
+      performance: performance.json
