Add PETSc BP2, BP4, BP5, BP6

--- a/examples/petsc/Makefile
+++ b/examples/petsc/Makefile
@@ -11,8 +11,8 @@ LDFLAGS = $(call pkgconf, --libs-only-L --libs-only-other $(PETSc.pc) $(ceed.pc)
 LDFLAGS += $(patsubst -L%, $(call pkgconf, --variable=ldflag_rpath $(PETSc.pc))%, $(call pkgconf, --libs-only-L $(PETSc.pc) $(ceed.pc)))
 LDLIBS = $(call pkgconf, --libs-only-l $(PETSc.pc) $(ceed.pc)) -lm
 
-bp.c := $(sort $(wildcard bp*.c))
-bp := $(bp.c:%.c=%)
+bps.c := bps.c
+bp := $(bps.c:%.c=%)
 
 all: $(bp)
 $(bp): | $(PETSc.pc) $(ceed.pc)
